--- a/LMTSoftware/src/phatsmalone/com/Main/NewProject.fxml
+++ b/LMTSoftware/src/phatsmalone/com/Main/NewProject.fxml
@@ -1,26 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
-fx:controller="phatsmalone.com.Main.Controller">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="125.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="312.0" minWidth="10.0" prefWidth="312.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.0" minWidth="10.0" prefWidth="113.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="129.0" minHeight="10.0" prefHeight="72.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="117.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="211.0" minHeight="10.0" prefHeight="211.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label alignment="CENTER" prefHeight="69.0" prefWidth="402.0" text="New Project" textAlignment="CENTER" GridPane.columnIndex="1">
+      <Label alignment="CENTER" prefHeight="81.0" prefWidth="600.0" text="New Project Information">
          <font>
             <Font size="25.0" />
-         </font>
-      </Label>
+         </font></Label>
+      <GridPane prefHeight="319.0" prefWidth="600.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="321.0" minWidth="10.0" prefWidth="264.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="336.0" minWidth="10.0" prefWidth="336.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="114.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="202.0" minHeight="10.0" prefHeight="202.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="74.0" text="Next" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Back" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="175.0" />
+               </GridPane.margin></Button>
+            <Label text="Project Name:">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label prefHeight="29.0" prefWidth="168.0" text="Project Location:" GridPane.rowIndex="1">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <TextField prefHeight="36.0" prefWidth="336.0" GridPane.columnIndex="1" />
+            <TextField prefHeight="37.0" prefWidth="340.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
    </children>
-</GridPane>
+</VBox>
