--- a/LMTSoftware/src/phatsmalone/com/Main/NewProject.fxml
+++ b/LMTSoftware/src/phatsmalone/com/Main/NewProject.fxml
@@ -36,8 +36,8 @@
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <TextField prefHeight="36.0" prefWidth="336.0" GridPane.columnIndex="1" />
-            <TextField prefHeight="37.0" prefWidth="340.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="pName" prefWidth="336.0" GridPane.columnIndex="1" />
+            <TextField fx:id="directory" prefHeight="37.0" prefWidth="340.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
