--- a/LMTSoftware/src/phatsmalone/com/Main/NewProject.fxml
+++ b/LMTSoftware/src/phatsmalone/com/Main/NewProject.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="phatsmalone.com.Main.Controller">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="phatsmalone.com.Main.Controller">
    <children>
       <Label alignment="CENTER" prefHeight="81.0" prefWidth="600.0" text="New Project Information">
          <font>
@@ -23,8 +22,8 @@
           <RowConstraints maxHeight="202.0" minHeight="10.0" prefHeight="202.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="74.0" text="Next" GridPane.columnIndex="1" GridPane.rowIndex="2" onAction="#NextButton"/>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Back" GridPane.rowIndex="2" onAction="#BackButton">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#NextButton" prefHeight="34.0" prefWidth="74.0" text="Next" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#BackButton" prefHeight="35.0" prefWidth="78.0" text="Back" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="175.0" />
                </GridPane.margin></Button>
@@ -36,8 +35,8 @@
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <TextField fx:id="pName" prefWidth="336.0" GridPane.columnIndex="1" />
-            <TextField fx:id="directory" prefHeight="37.0" prefWidth="340.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField id="pName" fx:id="pName" prefWidth="336.0" GridPane.columnIndex="1" />
+            <TextField id="directory" fx:id="directory" prefHeight="37.0" prefWidth="340.0" text="C:\" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
