--- a/LMTSoftware/src/phatsmalone/com/Main/NewProject.fxml
+++ b/LMTSoftware/src/phatsmalone/com/Main/NewProject.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="phatsmalone.com.Main.Controller">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="phatsmalone.com.Main.controllers.Controller">
    <children>
       <Label alignment="CENTER" prefHeight="81.0" prefWidth="600.0" text="New Project Information">
          <font>
