--- a/LMTSoftware/src/phatsmalone/com/Main/OpenProject.fxml
+++ b/LMTSoftware/src/phatsmalone/com/Main/OpenProject.fxml
@@ -6,7 +6,7 @@
 
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="phatsmalone.com.Main.Controller">
+      fx:controller="phatsmalone.com.Main.controllers.Controller">
    <children>
       <Label alignment="CENTER" layoutX="98.0" layoutY="60.0" prefHeight="109.0" prefWidth="348.0" text="Opens an existing project.">
          <font>
