--- a/LMTSoftware/src/phatsmalone/com/Main/MainScreen.fxml
+++ b/LMTSoftware/src/phatsmalone/com/Main/MainScreen.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.*?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="phatsmalone.com.Main.controllers.Controller">
+fx:controller="phatsmalone.com.Main.Controller">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="73.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="459.0" minWidth="0.0" prefWidth="444.0" />
