--- a/LMTSoftware/src/phatsmalone/com/Main/addFragment.fxml
+++ b/LMTSoftware/src/phatsmalone/com/Main/addFragment.fxml
@@ -1,11 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="phatsmalone.com.Main.AddFragment">
+<VBox fx:controller="phatsmalone.com.Main.AddItemFragmentController" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="236.0" layoutY="93.0" text="Fragment" />
+      <HBox prefHeight="52.0" prefWidth="600.0">
+         <children>
+            <Label alignment="BASELINE_CENTER" contentDisplay="CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="76.0" prefWidth="600.0" scaleShape="false" text="Add Item" textAlignment="CENTER">
+               <font>
+                  <Font size="32.0" />
+               </font></Label>
+         </children>
+      </HBox>
+      <HBox prefHeight="48.0" prefWidth="600.0">
+         <children>
+            <Label alignment="BASELINE_LEFT" prefWidth="75.0" scaleShape="false" text="Name:">
+               <cursor>
+                  <Cursor fx:constant="H_RESIZE" />
+               </cursor>
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <TextField prefWidth="150.0" fx:id="nameField">
+               <HBox.margin>
+                  <Insets left="50.0" />
+               </HBox.margin></TextField>
+         </children>
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin></HBox>
+      <HBox prefHeight="50.0" prefWidth="200.0">
+         <children>
+            <Label alignment="BASELINE_LEFT" prefWidth="125.0" text="Issue# or code:">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <TextField  fx:id="issueField"/>
+         </children>
+      </HBox>
+      <HBox prefHeight="50.0" prefWidth="200.0">
+         <children>
+            <Label prefWidth="125.0" text="Release Date:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="releaseDateField"/>
+         </children></HBox>
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Label alignment="BASELINE_LEFT" text="Description:">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <TextArea prefHeight="200.0" prefWidth="400.0" fx:id="descriptionField">
+               <HBox.margin>
+                  <Insets left="25.0" />
+               </HBox.margin>
+            </TextArea>
+         </children>
+      </HBox>
+      <HBox prefHeight="50.0" prefWidth="200.0">
+         <children>
+            <Label prefWidth="75.0" text="Price:">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <TextField fx:id="priceField">
+               <HBox.margin>
+                  <Insets left="50.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
+      </HBox>
+      <HBox prefHeight="50.0" prefWidth="200.0">
+         <children>
+            <Label text="Rarity Scale:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="rarityField">
+               <HBox.margin>
+                  <Insets left="30.0" />
+               </HBox.margin></TextField>
+         </children>
+      </HBox>
+      <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="200.0">
+         <children>
+            <Button minHeight="30.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="75.0" text="Add" fx:id="addButton" onAction="#addButtonEntered">
+               <HBox.margin>
+                  <Insets left="25.0" />
+               </HBox.margin>
+            </Button>
+            <Button minHeight="30.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="75.0" text="Cancel" fx:id="cancelButton" onAction="#CancelButtonEntered">
+               <HBox.margin>
+                  <Insets left="25.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </HBox>
    </children>
-</AnchorPane>
+   <padding>
+      <Insets left="10.0" />
+   </padding>
+</VBox>
